Ajout de texte en français

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Screen - Multipurpose Template By Bootstrapious.com</title>
+    <title>Association Nacomed</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -17,9 +17,9 @@
     <!-- Font Awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <!-- Parallax-->
-    <link rel="stylesheet" href="vendor/onepage-scroll/onepage-scroll.css">
+    <!-- <link rel="stylesheet" href="vendor/onepage-scroll/onepage-scroll.css"> -->
     <!-- theme stylesheet-->
-    <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="css/style.blue.css" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="css/custom.css">
     <!-- Favicon-->
@@ -31,7 +31,7 @@
   <body>
       <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
           <div class="container">
-          <a class="navbar-brand" href="index.html">Association Nacomed</a>
+          <a class="navbar-brand" href="index.html">NACOMED</a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
               Menu
               <i class="fas fa-bars"></i>
@@ -39,28 +39,23 @@
           
           <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                  <a class="nav-link" href="./index.php">Accueil</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="index.php?action=displayAbout">A propos</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="index.php?action=listArticles">Chapitres</a>
-              </li>
-
-              <!-- <?php
-                  if (isset($_SESSION['user'])) {
-                      $sessionUser = $_SESSION['user'];
-                      echo '<li class="nav-item"><a class="nav-link" href="./index.php?action=adminBoardDisplay">Administration</a></li>';
-                      echo '<li class="nav-item"><a class="nav-link signOut_link" href="./index.php?action=signOut">Déconnexion</a></li>';
-                  } else {
-                      echo '<li class="nav-item"><a class="nav-link" href="./index.php?action=login">Administration</a></li>';
-                  }
-              ?> -->
-
-              <li class="nav-item">
-                  <a class="nav-link" href="index.php?action=displayContact">Contact</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="./index.php">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.php?action=displayAbout">Actualités</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.php?action=listArticles">Embarquement</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.php?action=displayContact">Nous soutenir</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./index.php">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./index.php">Communauté</a>
               </li>
               </ul>
           </div>
@@ -72,8 +67,8 @@
         <div class="dark-overlay"></div>
         <div class="position-relative z-index-1">
           <div class="container text-center text-white">
-            <p class="font-italic lead">Oh, hello, nice to meet you!</p>
-            <h1 class="text-uppercase my-4">My name is screen</h1>
+            <p class="font-italic lead">Bienvenue sur le site de Nacomed !</p>
+            <h1 class="text-uppercase my-4">NACOMED</h1>
             <p class="font-italic lead">I am a nice scrolling template prepared for portfolio, telling stories and short presentations.</p>
             <p class="font-italic lead">I have best results with nice pictures on the background or nice colours.</p>
           </div>
@@ -236,9 +231,10 @@
       </section>
     </div>
     <!-- JavaScript files-->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/jquery/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="vendor/onepage-scroll/jquery.onepage-scroll.min.js"></script>
+    <!-- <script src="vendor/onepage-scroll/jquery.onepage-scroll.min.js"></script> -->
+    <script src="js/scroll_nav.js"></script>
     <script src="vendor/lightbox2/js/lightbox.min.js"></script>
     <script src="js/front.js"></script>
     <!-- FontAwesome CSS - loading as last, so it doesn't block rendering-->
