Ajout du script onepage-scroll

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Font Awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <!-- Parallax-->
-    <!-- <link rel="stylesheet" href="vendor/onepage-scroll/onepage-scroll.css"> -->
+    <link rel="stylesheet" href="vendor/onepage-scroll/onepage-scroll.css">
     <!-- theme stylesheet-->
     <link rel="stylesheet" href="css/style.blue.css" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
@@ -233,7 +233,7 @@
     <!-- JavaScript files-->
     <script src="vendor/jquery/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="vendor/onepage-scroll/jquery.onepage-scroll.min.js"></script> -->
+    <script src="vendor/onepage-scroll/jquery.onepage-scroll.js"></script>
     <script src="js/scroll_nav.js"></script>
     <script src="vendor/lightbox2/js/lightbox.min.js"></script>
     <script src="js/front.js"></script>
