commentarisation de sections inutiles

--- a/index.html
+++ b/index.html
@@ -81,13 +81,23 @@
             <div class="row align-items-center">
               <div class="col-lg-6 mb-4 mb-lg-0">
                 <header class="text-center">
-                  <h2 class="text-uppercase lined">About Me</h2>
+                  <h2 class="text-uppercase lined">Qui sommes-nous ?</h2>
                 </header>
-                <p class="lead">This can be an about section or anything else ;)</p>
-                <p>Impossible considered invitation him men instrument saw celebrated unpleasant. Put rest and must set kind next many near nay. He exquisite continued explained middleton am. Voice hours young woody has she think equal. Estate moment he at on wonder at season little. Six garden result summer set family esteem nay estate. End admiration mrs unreserved discovered comparison especially invitation.</p>
-                <p>Delightful unreserved impossible few estimating men favourable see entreaties. She propriety immediate was improving. He or entrance humoured likewise moderate. Much nor game son say feel. Fat make met can must form into gate. Me we offending prevailed discovery.</p>
+                <!-- <p class="lead">Présentation de l'association</p> -->
+                <h4 class="about-title">&Eacute;tudes scientifique : </h4>
+                <p class="lead">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu arcu quis velit tincidunt laoreet eget vitae augue. Sed gravida mi vitae venenatis interdum. Proin ac ligula et risus aliquet rhoncus in nec enim.
+                </p>
+                <h4 class="about-title">Visées écologiques : </h4>
+                <p class="lead">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu arcu quis velit tincidunt laoreet eget vitae augue. Sed gravida mi vitae venenatis interdum. Proin ac ligula et risus aliquet rhoncus in nec enim.
+                </p>
+                <h4 class="about-title">&Eacute;cole de navigation :</h4>
+                <p class="lead">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu arcu quis velit tincidunt laoreet eget vitae augue. Sed gravida mi vitae venenatis interdum. Proin ac ligula et risus aliquet rhoncus in nec enim.
+                </p>
               </div>
-              <div class="col-lg-6"><img src="img/about.jpg" alt="..." class="img-fluid rounded-circle d-block mx-auto"></div>
+              <div class="col-lg-6"><img src="img/logo_nacomed.jpg" alt="..." class="img-fluid rounded-circle d-block mx-auto"></div>
             </div>
           </div>
         </div>
@@ -96,25 +106,25 @@
         <div class="d-flex h-100 align-items-center">
           <div class="container">
             <header class="mb-5 text-center">
-              <h2 class="text-uppercase lined">Services</h2>
+              <h2 class="text-uppercase lined">Objectifs</h2>
             </header>
             <div class="row text-center">
               <div class="col-lg-4 col-md-6 mb-4">
-                <div class="icon mb-3"><i class="fas fa-desktop"></i></div>
-                <h4 class="text-uppercase lined lined-compact">Web design</h4>
-                <p class="text-mted">Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
+                <div class="icon mb-3"><i class="fas fa-microscope"></i></div>
+                <h4 class="text-uppercase lined lined-compact">Scientifiques</h4>
+                <p class="text-mted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu arcu quis velit tincidunt laoreet eget vitae augue.</p>
               </div>
               <div class="col-lg-4 col-md-6 mb-4">
-                <div class="icon mb-3"><i class="fas fa-print"></i></div>
-                <h4 class="text-uppercase lined lined-compact">Print</h4>
-                <p class="text-mted">Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
+                <div class="icon mb-3"><i class="fas fa-anchor"></i></div>
+                <h4 class="text-uppercase lined lined-compact">Navire école</h4>
+                <p class="text-mted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu arcu quis velit tincidunt laoreet eget vitae augue.</p>
               </div>
               <div class="col-lg-4 col-md-6 mb-4">
-                <div class="icon mb-3"><i class="fas fa-globe-americas"></i></div>
-                <h4 class="text-uppercase lined lined-compact">SEO and SEM</h4>
-                <p class="text-mted">Am terminated it excellence invitation projection as. She graceful shy.</p>
+                <div class="icon mb-3"><i class="fas fa-leaf"></i></div>
+                <h4 class="text-uppercase lined lined-compact">&Eacute;cologiques</h4>
+                <p class="text-mted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu arcu quis velit tincidunt laoreet eget vitae augue.</p>
               </div>
-              <div class="col-lg-4 col-md-6 mb-4">
+              <!-- <div class="col-lg-4 col-md-6 mb-4">
                 <div class="icon mb-3"><i class="far fa-lightbulb"></i></div>
                 <h4 class="text-uppercase lined lined-compact">consulting</h4>
                 <p class="text-mted">Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
@@ -128,16 +138,16 @@
                 <div class="icon mb-3"><i class="fas fa-user"></i></div>
                 <h4 class="text-uppercase lined lined-compact">UI &amp; UX</h4>
                 <p class="text-mted">Am terminated it excellence invitation projection as. She graceful shy.</p>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
       </section>
-      <section>
+      <!-- <section>
         <div class="d-flex h-100 align-items-center">
           <div class="container">
             <header class="text-center mb-5">
-              <h2 class="text-uppercase lined">Portfolio</h2>
+              <h2 class="text-uppercase lined">Missions</h2>
             </header>
             <div class="row">
               <div class="col-lg-12 text-center">
@@ -151,13 +161,13 @@
               <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-6.jpg" data-lightbox="image-1" data-title="My caption" class="d-block mb-1"><img src="img/portfolio-6.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
             </div>
           </div>
-        </div>
-      </section>
+        </div> 
+      </section> -->
       <section class="bg-gray">
         <div class="d-flex h-100 align-items-center">
           <div class="container">
             <header class="text-center mb-5">
-              <h2 class="text-uppercase lined">Text page</h2>
+              <h2 class="text-uppercase lined">Missions</h2>
             </header>
             <div class="row">
               <div class="col-lg-6">
