--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         <div class="scroll-btn link-scroll"><i class="fas fa-angle-double-down"></i></div>
       </section>
-      <section id="1">
+      <section>
         <div class="d-flex h-100 align-items-center">
           <div class="container">
             <div class="row align-items-center">
@@ -193,23 +193,23 @@
                 <form action="" class="contact-form">
                   <div class="row">
                     <div class="form-group col-lg-6">
-                      <label for="firstName">Your firstname *</label>
-                      <input id="firstName" type="text" name="firstname" placeholder="Enter your firstname" class="form-control">
+                      <label for="firstName">Votre prénom *</label>
+                      <input id="firstName" type="text" name="firstname" placeholder="Entrez votre prénom" class="form-control">
                     </div>
                     <div class="form-group col-lg-6">
-                      <label for="lastName">Your lastname *</label>
-                      <input id="lastName" type="text" name="lastname" placeholder="Enter your lastname" class="form-control">
+                      <label for="lastName">Votre nom *</label>
+                      <input id="lastName" type="text" name="lastname" placeholder="Entrez votre nom" class="form-control">
                     </div>
                     <div class="form-group col-lg-12">
-                      <label for="email">Your email *</label>
-                      <input id="email" type="email" name="email" placeholder="Enter your email" class="form-control">
+                      <label for="email">Votre email *</label>
+                      <input id="email" type="email" name="email" placeholder="Entrez votre email" class="form-control">
                     </div>
                     <div class="form-group col-lg-12">
-                      <label for="message">Your message for us *</label>
-                      <textarea id="message" name="message" placeholder="Enter your message" class="form-control"></textarea>
+                      <label for="message">Votre message</label>
+                      <textarea id="message" name="message" placeholder="Ecrivez votre message" class="form-control"></textarea>
                     </div>
                     <div class="form-group col-lg-12">
-                      <button type="submit" class="btn btn-outline-primary w-100">Send message</button>
+                      <button type="submit" class="btn btn-outline-primary w-100">Envoyer</button>
                     </div>
                   </div>
                 </form>
